--- a/www/css/style.css
+++ b/www/css/style.css
@@ -163,7 +163,8 @@ body {
     text-shadow: none;
     margin-left: 30%;
     margin-right: 30%;
-    margin-bottom: 20%;
+    margin-top: 29%;
+    margin-bottom: auto;
     padding: 0;
     color: red;
 }
