--- a/www/css/style.css
+++ b/www/css/style.css
@@ -246,6 +246,13 @@ body {
     margin-top: 5%;
 }
 
+.sur2 {
+    text-align: center;
+    font-family: arial;
+    font-size: 20px;
+    margin-top: 5%;
+}
+
 .chkbox {
     font-family: arial;
     font-size: 20px;  
