--- a/www/css/style.css
+++ b/www/css/style.css
@@ -32,13 +32,13 @@ body {
     margin-left: 20%;
 }
 
-#stBtn {
+#stBtn, #reBtn {
     font-family: arial;
     font-size: 20px;
     background-color: rgba(0, 108, 250, 1);
     color: white;
     text-shadow: none;
-    margin-top: 45%;
+    margin-top: 2%;
     margin-right: 20%;
     margin-left: 20%;
 }
@@ -58,7 +58,7 @@ body {
 #bsb, #bsb1, #bsb2, #bsb3, #bsb4, #bsb5, #bsb6, #csb, #csb1, #csb2, #csb3, #csb4, #csb5,
 #csb6, #csb7, #csb8, #csb9, #csb10, #csb11, #csb12, #csb13, #csb14, #csb15, #csb16, #csb17,
 #sdb, #sdb2, #sDat, #dsb, #dsb1, #dsb2, #dsb3, #esb, #esb1, #esb2, #esb3, #esb4, #esb5, #esb6, #esb7,
-#fsb, #fsb1, #fsb2, #fsb3, #fsb4, #fsb5, #gsb1, #gsb2, #gsb3 {
+#fsb, #fsb1, #fsb2, #fsb3, #fsb4, #fsb5, #gsb1, #gsb2, #gsb3, #csb18, #csb19, #csb20, #csb21 {
     font-family: arial;
     font-size: 20px;
     background-color: rgba(0, 108, 250, 1);
@@ -106,6 +106,11 @@ body {
     margin-top: 5%;
     margin-left: 25%;
     margin-right: 25%;
+}
+
+#svOk, #svErr {
+    text-align: center;
+    font-size: 18px;
 }
 
 #lft, #lft1, #lft2 {
@@ -241,6 +246,13 @@ body {
     text-align: left;
 }
 
+.sur3 {
+    text-align: center;
+    font-family: arial;
+    font-size: 30px;
+    margin-top: 40%;
+}
+
 .sur1 {
     text-align: center;
     font-family: arial;
@@ -291,7 +303,7 @@ fieldset.ui-controlgroup {
 }
 
 #atxt, #a4txt, #a8txt, #a9txt, #b2txt, #b3txt, #c1atxt, #c1btxt, #c2atxt, #c2btxt, #c3atxt, #c3btxt, #c4atxt, #f1atxt,
-#f1btxt, #f1ctxt, #f1dtxt, #f1etxt {
+#f1btxt, #f1ctxt, #f1dtxt, #f1etxt, #c5atxt, #c5btxt, #idtxt {
     font-family: arial;
     font-size: 20px;
 }
@@ -482,6 +494,20 @@ fieldset.ui-controlgroup {
     margin-top: 20px;
     margin-bottom: 0;
     margin-left: 0;
+    margin-right: 10px;
+}
+
+#c5a .ui-input-text {
+    margin-top: 20px;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 10px;
+}
+
+#c5b .ui-input-text {
+    margin-top: 20px;
+    margin-bottom: 0;
+    margin-left: 50%;
     margin-right: 10px;
 }
 
