--- a/www/css/style.css
+++ b/www/css/style.css
@@ -236,6 +236,26 @@ body {
     padding-bottom: 10px;
 }
 
+#inBlk3 li {
+    padding-bottom: 10px;
+}
+
+#inBlk4 li {
+    padding-bottom: 10px;
+}
+
+#inBlk5 li {
+    padding-bottom: 10px;
+}
+
+#inBlk6 li {
+    padding-bottom: 10px;
+}
+
+#inBlk7 li {
+    padding-bottom: 10px;
+}
+
 #sinBlk li {
     padding-bottom: 10px;
 }
