--- a/www/css/style.css
+++ b/www/css/style.css
@@ -27,7 +27,7 @@ body {
     background-color: rgba(0, 108, 250, 1);
     color: white;
     text-shadow: none;
-    margin-top: 50%;
+    margin-top: 5%;
     margin-right: 20%;
     margin-left: 20%;
 }
@@ -277,6 +277,13 @@ body {
     text-align: center;
     font-family: arial;
     font-size: 30px;
+    margin-top: 5%;
+}
+
+.fin1 {
+    text-align: center;
+    font-family: arial;
+    font-size: 20px;
     margin-top: 5%;
 }
 
