--- a/www/css/style.css
+++ b/www/css/style.css
@@ -54,11 +54,12 @@ body {
     margin-left: 20%;
 }
 
-#asb, #asb1, #asb2, #asb3, #asb4, #asb5, #asb6, #asb7, #asb8, #asb9, #asb9a, #asb10,
+#asb, #asb1, #asb2, #asb3, #asb4, #asb5, #asb6, #asb7, #asb8, #asb9, #asb9a, #asb10, #asb11,
 #bsb, #bsb1, #bsb2, #bsb3, #bsb4, #bsb5, #bsb6, #csb, #csb1, #csb2, #csb3, #csb4, #csb5,
 #csb6, #csb7, #csb8, #csb9, #csb10, #csb11, #csb12, #csb13, #csb14, #csb15, #csb16, #csb17,
 #sdb, #sdb2, #sDat, #dsb, #dsb1, #dsb2, #dsb3, #esb, #esb1, #esb2, #esb3, #esb4, #esb5, #esb6, #esb7,
-#fsb, #fsb1, #fsb2, #fsb3, #fsb4, #fsb5, #gsb1, #gsb2, #gsb3, #csb18, #csb19, #csb20, #csb21 {
+#fsb, #fsb1, #fsb2, #fsb3, #fsb4, #fsb5, #fsb6, #gsb1, #gsb2, #gsb3, #gsb4, #csb18, #csb19, #csb20, #csb21, #csb22,
+#csb23, #csb24, #csb25, #csb26, #csb27, #csb28, #csb29, #csb30, #csb31, #csb32, #csb33 {
     font-family: arial;
     font-size: 20px;
     background-color: rgba(0, 108, 250, 1);
