Final logic changes

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -331,7 +331,7 @@ fieldset.ui-controlgroup {
 }
 
 #atxt, #a4txt, #a8txt, #a9txt, #b2txt, #b3txt, #c1atxt, #c1btxt, #c2atxt, #c2btxt, #c3atxt, #c3btxt, #c4atxt, #f1atxt,
-#f1btxt, #f1ctxt, #f1dtxt, #f1etxt, #c5atxt, #c5btxt, #idtxt {
+#f1btxt, #f1ctxt, #f1dtxt, #f1etxt, #c5atxt, #c5btxt, #idtxt, #c3d7txt, #f1vtxt {
     font-family: arial;
     font-size: 20px;
 }
